derive/tests/snapshots/foreign_key_and_referenced_by/Shipment/execute_on_delete_strategies_of_the_shipment_table_after_one_row_of_the_warehouse_table_was_deleted.snap
---
source: derive/src/characterization_tests.rs
---
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `shipment` after one row of the referenced table `warehouse` was deleted.
    pub fn execute_on_delete_strategies_of_the_shipment_table_after_one_row_of_the_warehouse_table_was_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_value_of_a_row_of_another_table_to_delete: &u64,
    ) -> Result<
        Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
    > {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use self::this_compilation_error_occurs_because_the_warehouse_table_has_no_referenced_by_attribute_referencing_the_shipment_table;
        use ::spacetimedsl::itertools::Itertools;
        let mut entries = vec![];
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::OnDeleteStrategy::Error => {
                    for row in dsl
                        .db()
                        .shipment()
                        .destination_warehouse_id()
                        .filter(primary_key_value_of_a_row_of_another_table_to_delete)
                    {
                        error = true;
                        let child_entries = vec![];
                        let id = &row.id;
                        entries
                            .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                table_name: "shipment".into(),
                                column_name: "destination_warehouse_id".into(),
                                strategy: crate::spacetimedsl::OnDeleteStrategy::Error,
                                row_value: format!("{}", ShipmentId::new(id.clone()))
                                    .into(),
                                child_entries,
                            });
                    }
                }
                crate::spacetimedsl::OnDeleteStrategy::Delete => {
                    for row in dsl
                        .db()
                        .shipment()
                        .origin_warehouse_id()
                        .filter(primary_key_value_of_a_row_of_another_table_to_delete)
                    {
                        let child_entries = vec![];
                        let id = &row.id;
                        entries
                            .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                table_name: "shipment".into(),
                                column_name: "origin_warehouse_id".into(),
                                strategy: crate::spacetimedsl::OnDeleteStrategy::Delete,
                                row_value: format!("{}", ShipmentId::new(id.clone()))
                                    .into(),
                                child_entries,
                            });
                        dsl.db().shipment().id().delete(row.id);
                    }
                }
                crate::spacetimedsl::OnDeleteStrategy::SetZero => {}
                crate::spacetimedsl::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}
